tests/ui/methods/issues/issue-84495.stderr
error[E0599]: `i32` is not an iterator
  --> $DIR/issue-84495.rs:3:24
   |
LL |     println!("{:?}", x.count());
   |                        ^^^^^ `i32` is not an iterator
   |
   = note: the following trait bounds were not satisfied:
           `i32: Iterator`
           which is required by `&mut i32: Iterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
