tests/ui/methods/issues/issue-84495.rs
fn main() {
    let x: i32 = 1;
    println!("{:?}", x.count()); //~ ERROR is not an iterator
}
